--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="et_buscar">Buscar...</string>
     <string name="btn_buscar">Buscar</string>
     <string name="txt_resultado_buscar">Resultado de la busqueda:</string>
-    <string name="txt_titulo">Notebook Latitude E6410</string>
-    <string name="precio">$ 10000</string>
+    <string name="txt_titulo">Cargando...</string>
+    <string name="signo">$&#160;</string>
+    <string name="precio"></string>
 </resources>
